@@ -401,14 +401,18 @@ namespace libtorrent
 		return 1 << i;
 	}
 
-	int load_file(std::string const& filename, std::vector<char>& v, int limit)
+	int load_file(std::string const& filename, std::vector<char>& v, error_code& ec, int limit)
 	{
+		ec.clear();
 		file f;
-		error_code ec;
 		if (!f.open(filename, file::read_only, ec)) return -1;
 		size_type s = f.get_size(ec);
 		if (ec) return -1;
-		if (s > limit) return -2;
+		if (s > limit)
+		{
+			ec = error_code(errors::metadata_too_large, get_libtorrent_category());
+			return -2;
+		}
 		v.resize(s);
 		if (s == 0) return 0;
 		file::iovec_t b = {&v[0], s};
@@ -576,11 +580,11 @@ namespace libtorrent
 		, m_i2p(false)
 	{
 		std::vector<char> buf;
-		int ret = load_file(filename, buf);
-		if (ret < 0) return;
+		error_code ec;
+		int ret = load_file(filename, buf, ec);
+		if (ret < 0) throw invalid_torrent_file(ec);
 
 		lazy_entry e;
-		error_code ec;
 		if (buf.size() == 0 || lazy_bdecode(&buf[0], &buf[0] + buf.size(), e, ec) != 0)
 			throw invalid_torrent_file(ec);
 
@@ -601,11 +605,11 @@ namespace libtorrent
 		std::vector<char> buf;
 		std::string utf8;
 		wchar_utf8(filename, utf8);
-		int ret = load_file(utf8, buf);
-		if (ret < 0) return;
+		error_code ec;
+		int ret = load_file(utf8, buf, ec);
+		if (ret < 0) throw invalid_torrent_file(ec);
 
 		lazy_entry e;
-		error_code ec;
 		if (buf.size() == 0 || lazy_bdecode(&buf[0], &buf[0] + buf.size(), e, ec) != 0)
 			throw invalid_torrent_file(ec);
 
@@ -650,7 +654,7 @@ namespace libtorrent
 		, m_i2p(false)
 	{
 		std::vector<char> buf;
-		int ret = load_file(filename, buf);
+		int ret = load_file(filename, buf, ec);
 		if (ret < 0) return;
 
 		lazy_entry e;
@@ -671,7 +675,7 @@ namespace libtorrent
 		std::vector<char> buf;
 		std::string utf8;
 		wchar_utf8(filename, utf8);
-		int ret = load_file(utf8, buf);
+		int ret = load_file(utf8, buf, ec);
 		if (ret < 0) return;
 
 		lazy_entry e;
